[package]
name = "image-stiching-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
nalgebra = "0.32.2"
opencv = "0.80.0"
rand = { version = "0.8", features = ["std_rng"] }
